[build-system]
requires = [
  "setuptools>=61", 
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "clearvoice"
version = "0.1.2"
description = "A unified inference platform for speech processing tasks"
authors = [
  { name = "Zhao Shengkui", email = "shengkui.zhao@alibaba-inc.com" },
  { name = "Pan Zexu", email = "zexu.pan@alibaba-inc.com" },
  { name = "Nguyen Trung Hieu", email = "trunghieu.nguyen@alibaba-inc.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "torch==2.9.1",
  "torchaudio==2.9.1",
  "torchvision",
  "pytorch-lightning==2.5.6",
  "numpy==2.3.4",
  "scipy==1.16.3",
  "scikit-learn==1.7.2",
  "librosa==0.10.2.post1",
  "soundfile==0.13.1",
  "pydub",
  "python_speech_features==0.6",
  "julius==0.2.7",
  "einops==0.8.1",
  "rotary_embedding_torch==0.8.3",
  "torch-audiomentations==0.12.0",
  "torch_pitch_shift==1.2.5",
  "torchmetrics==1.8.2",
  "huggingface-hub==1.1.4",
  "gdown==5.2.0",
  "opencv-python==4.10.0.84",
  "av==16.0.1",
  "pyannote-audio==4.0.1",
  "pyannote-core==6.0.1",
  "pyannote-database==6.1.0",
  "pyyaml==6.0.3",
  "yamlargparse",
  "tqdm==4.67.1",
  "packaging==25.0",
  "onnxruntime==1.23.2",
  "ctranslate2==4.6.1",
  "faster-whisper==1.2.1",
  "omegaconf==2.3.0",
  "pydantic==2.12.4",
  "tensorboard",
  "torchinfo",
  "typeguard==4.3.0",
  "scenedetect==0.6.6",
  "joblib==1.5.2",
  "pesq==0.0.4",
  "pystoi==0.3.3",
  "mir_eval==0.7"
]

[project.urls]
homepage = "https://github.com/modelscope/ClearerVoice-Studio"

[tool.setuptools.package-data]
"clearvoice" = ["config/**/*.yaml", "config/**/*.json"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["clearvoice*"]
